# opencv_tensorflow_rust

./: Cargo.toml  README.md  build.rs  build.sh
labels/: open_images_labels.csv  ssd_inception_labels.csv
rsrc/: config.yml
src/: main.rs  pkg.rs
src/pkg/: sink.rs  tensor.rs
