[package]
name = "opencv_rtsp"
version = "0.1.0"
authors = ["joao"]
edition = "2018"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.29", default-features = false, features = ["opencv-34"]}
tensorflow = "0.14"
serde_yaml = "0.8"
serde_json = "1"
minreq = "2"
#minreq = { version = "2", features = ["https", "json-using-serde"] }
